Lint and format update.

--- a/examples/legate/explanation_legate_magnus_qubit.ipynb
+++ b/examples/legate/explanation_legate_magnus_qubit.ipynb
@@ -250,8 +250,7 @@
     "def test_magnus_acc(\n",
     "    test_sys: System, test_tlist: np.ndarray, num_magnus_intervals: int, plot=False\n",
     "):\n",
-    "    \"\"\"\n",
-    "    Given a system and time list, compare the accuracy of the magnus expansion for a\n",
+    "    \"\"\"Given a system and time list, compare the accuracy of the magnus expansion for a\n",
     "    given number of magnus intervals.\n",
     "    \"\"\"\n",
     "    test_magnus = MagnusTimeEvol(test_sys, tlist=test_tlist)\n",
