--- a/examples/legate/explanation_legate_npad_duffing_resonator_zz.ipynb
+++ b/examples/legate/explanation_legate_npad_duffing_resonator_zz.ipynb
@@ -88,8 +88,7 @@
     "    alpha2: float = -0.33,  # GHz\n",
     "    g: float = 0.05,  # GHz\n",
     "):\n",
-    "    \"\"\"\n",
-    "    Assume some sensible default parameters.\n",
+    "    \"\"\"Assume some sensible default parameters.\n",
     "    \"\"\"\n",
     "    wr = 3  # GHz #probably a a sensible value\n",
     "    del1 = 0.5 * (delp + delm)\n",
@@ -107,8 +106,7 @@
     "\n",
     "\n",
     "def full_numerical_ham(example) -> np.ndarray:\n",
-    "    \"\"\"\n",
-    "    Returns the full Hamiltonian matrix (Eq. 24)\n",
+    "    \"\"\"Returns the full Hamiltonian matrix (Eq. 24)\n",
     "    \"\"\"\n",
     "    N1 = example.qubit1.ntrunc\n",
     "    N2 = example.qubit2.ntrunc\n",
@@ -166,8 +164,7 @@
     "\n",
     "\n",
     "def numerical_qubit_subspace_spectrum(example):\n",
-    "    \"\"\"\n",
-    "    Returns the eigenvalues E00, E01, E10, E11\n",
+    "    \"\"\"Returns the eigenvalues E00, E01, E10, E11\n",
     "    \"\"\"\n",
     "    evals, evecs = qt.Qobj(full_numerical_ham(example)).eigenstates()\n",
     "    dims = [example.qubit1.ntrunc, example.qubit2.ntrunc, example.resonator.ntrunc]\n",
@@ -180,8 +177,7 @@
     "\n",
     "\n",
     "def full_numerical_zz(delp, delm) -> float:\n",
-    "    \"\"\"\n",
-    "    Calculates static ZZ interaction strength numerically from the full Hamiltonian. Eq 24\n",
+    "    \"\"\"Calculates static ZZ interaction strength numerically from the full Hamiltonian. Eq 24\n",
     "\n",
     "    \"\"\"\n",
     "    E00, E01, E10, E11 = numerical_qubit_subspace_spectrum(\n",
